--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,3 +4,19 @@
   border: 0;
   box-sizing: border-box;
 }
+
+.error {
+  border: 1px solid red;
+}
+
+.success {
+  border: 1px solid green;
+}
+
+#errorDiv {
+  color: red;
+}
+
+#successDiv {
+  color: green;
+}
