--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,9 +1,6 @@
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .error {
   border: 2px solid red;
